--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "jsdom": "^16.7.0",
     "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "prettier": "2.3.2"
   }
 }
